--- a/index.css
+++ b/index.css
@@ -1,159 +1,380 @@
 *{
-    margin: 0px;
+    margin: 10px;
     padding: 0px;
+    background-color: black;
     /* background-color:cyan; */
 }
-@media screen and (min-width:350px) {
-    .calc{
-        font-size: 4rem;
-        text-align: center;
-    }
-    .flex{
-        display: flex;
-        
-    }
-    .bbg{
-        background-color: red;
-    }
-    .mw-20{
-        width: 20vw;
-        margin: auto;
-        margin-top: 3%;
-    }
-    .flex-column{
-        flex-direction: column;
-        /* background-color: red; */
-    }
-    .button{
-        padding: 3px;
-        margin: 2px;
-        background-color: white;
-        cursor: pointer;
-        border: solid 2.3px black;
-        border-radius: 5px ;
-        font-size: 7px;
-        font-weight: bolder;
-        height: 15px;
-    }
-    .screen{
-        border: solid 2px black;
-        height: 30px;
-        background-color: white;
-        margin-bottom: 20px;
-        
-    }
-    .flex-button{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        /* color: black; */
-        align-content: center;
-        justify-content: space-between;
-    }
-    .button:hover{
-        background-color: darkgray;
-    }
-}
-@media screen and (min-width:722px) {
-    .calc{
-        font-size: 4rem;
-        text-align: center;
-    }
-    .flex{
-        display: flex;
-        
-    }
-    .bbg{
-        background-color: red;
-    }
-    .mw-20{
-        width: 20vw;
-        margin: auto;
-        margin-top: 3%;
-    }
-    .flex-column{
-        flex-direction: column;
-        /* background-color: red; */
-    }
-    .button{
-        padding: 10px;
-        margin: 4px;
-        background-color: white;
-        cursor: pointer;
-        border: solid 2.3px black;
-        border-radius: 5px ;
-        font-size: 8px;
-        font-weight: bolder;
-        height: 15px;
-    }
-    .screen{
-        border: solid 2px black;
-        height: 30px;
-        background-color: white;
-        margin-bottom: 20px;
-        
-    }
-    .flex-button{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        /* color: black; */
-        align-content: center;
-        justify-content: space-between;
-    }
-    .button:hover{
-        background-color: darkgray;
-    }
-}
-@media screen and (min-width:1387px) {
-    
 .calc{
     font-size: 4rem;
     text-align: center;
+    color: white;
 }
-.flex{
-    display: flex;
+@media screen and (min-width:425px) {
+    .flex{
+        display: flex;
+        
+    }
+    .bbg{
+        background-color: red;
+    }
+    .mw-20{
+        width: 20vw;
+        margin: auto;
+        margin-top: 3%;
+    }
+    .flex-column{
+        flex-direction: column;
+        /* background-color: red; */
+    }
+    .button{
+        padding: 20px;
+        /* margin: 10px; */
+        background-color: white;
+        cursor: pointer;
+        border: solid 2.3px black;
+        border-radius: 10px ;
+        font-size: 25px;
+        font-weight: bolder;
+        display: flex;
+        /* text-align: center; */
+        align-items: center;
+        color: white;
+        /* justify-content: end; */
+        /* justify-content: center; */
+    }
+    .screen{
+        border: solid 2px black;
+        height: 30px;
+        background-color: black;
+        margin-bottom: 20px;
+        color: white;
+        font-size: 20px;
+        
+    }
+    .flex-button{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        /* color: black; */
+        align-content: center;
+        justify-content: space-evenly;
+    }
+    .button:hover{
+        background-color: darkgray;
+    }
+    .button0{
+        width: 145px;
+        text-align: center;
+    }
+    .button-topr{
+        padding: 16px;
+        background-color: white;
+        cursor: pointer;
+        color: black;
+        border: solid 2.3px black;
+        border-radius: 10px ;
+        font-size: 20px;
+        font-weight: bolder;
+        
     
-}
-.bbg{
-    background-color: red;
-}
-.mw-20{
-    width: 20vw;
-    margin: auto;
-    margin-top: 3%;
-}
-.flex-column{
-    flex-direction: column;
-    /* background-color: red; */
-}
-.button{
-    padding: 20px;
-    margin: 10px;
-    background-color: white;
-    cursor: pointer;
-    border: solid 2.3px black;
-    border-radius: 5px ;
-    font-size: 10px;
-    font-weight: bolder;
-    height: 15px;
-}
-.screen{
-    border: solid 2px black;
-    height: 30px;
-    background-color: white;
-    margin-bottom: 20px;
+        
+    }
+    .flex-button-topr{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+    .bbg-yellow{
+        background-color: orange;
+    }
+    .bbg-darkgrey{
+        background-color:rgba(93, 92, 92, 0.737);
+    }
+    .bbg-lightgrey{
+        background-color: rgb(255, 234, 234);
+    }
+    .color-white{
+        color: white
+    }
+    .width{
+        width:400px;
+    }
+    }
+@media screen and (min-width:768px) {
+    .flex{
+        display: flex;
+        
+    }
+    .bbg{
+        background-color: red;
+    }
+    .mw-20{
+        width: 20vw;
+        margin: auto;
+        margin-top: 3%;
+    }
+    .flex-column{
+        flex-direction: column;
+        /* background-color: red; */
+    }
+    .button{
+        padding: 20px;
+        /* margin: 10px; */
+        background-color: white;
+        cursor: pointer;
+        border: solid 2.3px black;
+        border-radius: 10px ;
+        color: white;
+        font-size: 40px;
+        font-weight: bolder;
+        display: flex;
+        /* text-align: center; */
+        align-items: center;
+        /* justify-content: end; */
+        /* justify-content: center; */
+    }
+    .screen{
+        border: solid 2px black;
+        height: 30px;
+        background-color: black;
+        margin-bottom: 20px;
+        color: white;
+        font-size: 20px;
+        
+    }
+    .flex-button{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        /* color: black; */
+        align-content: center;
+        justify-content: space-evenly;
+    }
+    .button:hover{
+        background-color: darkgray;
+    }
+    .button0{
+        width: 160px;
+        text-align: center;
+    }
+    .button-topr{
+        padding: 15px;
+        background-color: white;
+        cursor: pointer;
+        border: solid 2.3px black;
+        border-radius: 10px ;
+        color: black;
+        font-size: 30px;
+        font-weight: bolder;
+        
     
-}
-.flex-button{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    /* color: black; */
-    align-content: center;
-    justify-content: space-between;
-}
-.button:hover{
-    background-color: darkgray;
-}
-}
+        
+    }
+    .flex-button-topr{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+    .bbg-yellow{
+        background-color: orange;
+    }
+    .bbg-darkgrey{
+        background-color:rgba(93, 92, 92, 0.737);
+    }
+    .bbg-lightgrey{
+        background-color: rgb(255, 234, 234);
+    }
+    .color-white{
+        color: white
+    }
+    .width{
+        width: 400px;
+    }}
+    }
+    @media screen and (min-width:1024px) {
+           .flex{
+           display: flex;
+           
+       }
+       .bbg{
+           background-color: red;
+       }
+       .mw-20{
+           width: 20vw;
+           margin: auto;
+           margin-top: 3%;
+       }
+       .flex-column{
+           flex-direction: column;
+           /* background-color: red; */
+       }
+       .button{
+           padding: 20px;
+           /* margin: 10px; */
+           background-color: white;
+           cursor: pointer;
+           border: solid 2.3px black;
+           border-radius: 10px ;
+           font-size: 25px;
+           font-weight: bolder;
+           display: flex;
+           /* text-align: center; */
+           align-items: center;
+           color: white;
+           /* justify-content: end; */
+           /* justify-content: center; */
+       }
+       .screen{
+           border: solid 2px black;
+           height: 30px;
+           background-color: black;
+           margin-bottom: 20px;
+           color: white;
+           font-size: 20px;
+           
+       }
+       .flex-button{
+           display: flex;
+           flex-direction: row;
+           flex-wrap: wrap;
+           /* color: black; */
+           align-content: center;
+           justify-content: space-between;
+       }
+       .button:hover{
+           background-color: darkgray;
+       }
+       .button0{
+           width: 160px;
+           text-align: center;
+       }
+       .button-topr{
+           padding: 21px;
+           background-color: white;
+           cursor: pointer;
+           border: solid 2.3px black;
+           border-radius: 10px ;
+           font-size: 25px;
+           font-weight: bolder;
+           color: black;
+           
+       
+           
+       }
+       .flex-button-topr{
+           display: flex;
+           flex-direction: row;
+           flex-wrap: wrap;
+           justify-content: space-evenly;
+       }
+       .bbg-yellow{
+           background-color: orange;
+       }
+       .bbg-darkgrey{
+           background-color:rgba(93, 92, 92, 0.737);
+       }
+       .bbg-lightgrey{
+           background-color: rgb(255, 234, 234);
+       }
+       .color-white{
+           color: white
+       }
+       .width{
+        width: 400px;
+       }
+       }
+   @media screen and (min-width:1440px) {
+           .flex{
+               display: flex;
+               
+           }
+           .bbg{
+               background-color: red;
+           }
+           .mw-20{
+               width: 20vw;
+               margin: auto;
+               margin-top: 3%;
+           }
+           .flex-column{
+               flex-direction: column;
+               /* background-color: red; */
+           }
+           .button{
+               padding: 20px;
+               /* margin: 10px; */
+               background-color: white;
+               cursor: pointer;
+               border: solid 2.3px black;
+               border-radius: 10px ;
+               font-size: 25px;
+               font-weight: bolder;
+               display: flex;
+               /* text-align: center; */
+               align-items: center;
+               color: white;
+               /* justify-content: end; */
+               /* justify-content: center; */
+           }
+           .screen{
+               border: solid 2px black;
+               height: 30px;
+               background-color: black;
+               margin-bottom: 20px;
+               color: white;
+               font-size: 20px;
+               
+           }
+           .flex-button{
+               display: flex;
+               flex-direction: row;
+               flex-wrap: wrap;
+               /* color: black; */
+               align-content: center;
+               justify-content: space-between;
+           }
+           .button:hover{
+               background-color: darkgray;
+           }
+           .button0{
+               width: 120px;
+               text-align: center;
+           }
+           .button-topr{
+               padding: 20px;
+               background-color: white;
+               cursor: pointer;
+               border: solid 2.3px black;
+               border-radius: 10px ;
+               font-size: 22px;
+               font-weight: bolder;
+               color: black;
+               
+           
+               
+           }
+           .flex-button-topr{
+               display: flex;
+               flex-direction: row;
+               flex-wrap: wrap;
+               justify-content: space-evenly;
+           }
+           .bbg-yellow{
+               background-color: orange;
+           }
+           .bbg-darkgrey{
+               background-color:rgba(93, 92, 92, 0.737);
+           }
+           .bbg-lightgrey{
+               background-color: rgb(255, 234, 234);
+           }
+           .color-white{
+               color: white
+           }
+           .width{
+            width: 400px;
+           }
+           }
+    
